# vocabulary

./: .gitignore  LICENSE  README.md  pyproject.toml
vocabulary/: main.py  main2.py  template.xlsx
